--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -26,58 +26,70 @@
 			<div class="carousel-item active">
 				<img class="d-block w-100" src="{% static 'img/ikoria_banner_img.jpg' %}" alt="First slide">
             </div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="Second slide">
+				<div class="carousel-item">
+					<img class="d-block w-100" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="Second slide">
             </div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="{% static 'img/ikoria_banner_img2.jpg' %}" alt="Third slide">
+					<div class="carousel-item">
+						<img class="d-block w-100" src="{% static 'img/ikoria_banner_img2.jpg' %}" alt="Third slide">
             </div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div>
-</div>
-<!--End of carousel-->
-<div class="container">
-<!--Website Header-->
-	<div class="row">
-	    <div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
-			<h3 class="display-4">This is the home page</h3>
-			<p class="lead">This is filler text below the home page. Lorem, ipsum dolor sit amet consectetur
-							adipisicing
-							elit.tatibus excepturi voluptas itaque? A debitis tempore libero itaque!</p>
-		</div>
-	</div>
-<!---->
-	<div class="row justify-content-around max-width pt-3">
-<!--Popular cards sorted by views-->
-		<div class="col-sm-12 col-md-12 col-lg-4">
-			<h1 class="pb-3 mb-4 border-bottom">
-				Popular Listings
-			</h1>
-
-			{% for card in cards|dictsortreversed:"listing_views" %}
-
-<!--This is a test id to try to trigger the display image function in custom.js-->
-			<button class="button" id="show-image-{{ forloop.counter0 }}">Show Image</button>
-			<button class="button" id="hide-image-{{ forloop.counter0 }}">Hide Image</button>
-<!---->
-			<div class="card mb-4 shadow-sm">
-
-			<div class="card-header">
-				{{ card.card_title }}
+					</div>
+					<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
 			</div>
-			<div class="card-body">
-				<p>{{ card.card_description|truncatewords:30 }}</p>
+			<!--End of carousel-->
+			<div class="container">
+				<!--Website Header-->
+				<div class="row border-bottom">
+					<div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
+						<h3 class="display-4">Magic Market Update</h3>
+						<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
+							rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
+							adipisci pariatur alias officia numquam. Consectetur, aspernatur?
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+							pariatur alias officia numquam. Consectetur, aspernatur?
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+							pariatur alias officia numquam. Consectetur, aspernatur?</p>
+					</div>
+				</div>
+				<!---->
+				<div class="row justify-content-around pt-3">
+					<!--Popular cards sorted by views-->
+					<div class="col-sm-12 col-md-12 col-lg-4">
+						<h1 class="pb-3 mb-4 ">
+							Popular Listings
+						</h1>
 
-				{% if card.image %}
-			    <img class="card-image" id="card-image-test-{{ forloop.counter0 }}" src="/media/{{ card.image }}">
+						{% for card in cards|dictsortreversed:"listing_views" %}
+                        
+						<!--This is a test id to try to trigger the display image function in custom.js-->
+						<button class="button" onclick="imageToggleHide({{ card.id }})">Hide Image</button>
+						<button class="button" onclick="imageToggleShow({{ card.id }})">Show Image</button>
+
+                        <script>
+                        console.log("The card ID is {{card.id}}")
+                        </script>
+
+
+						<!---->
+						<div class="card mb-4 shadow-sm">
+
+							<div class="card-header">
+								{{ card.card_title }}
+							</div>
+							<div class="card-body">
+								<p>{{ card.card_description|truncatewords:30 }}</p>
+
+								{% if card.image %}
+								<img class="card-image" id="{{card.id}}" src="/media/{{ card.image }}">
                 {% endif %}
 
 			</div>
@@ -89,7 +101,7 @@
 
 						<!--Latest listings section-->
 						<div class="col-sm-12 col-md-12 col-lg-4">
-							<h1 class="pb-3 mb-4 border-bottom">
+							<h1 class="pb-3 mb-4">
 								Recent Listings
 							</h1>
 							{% for card in cards|dictsortreversed:"listing_created_date"%}
@@ -102,12 +114,19 @@
 									<p>{{ card.card_description|truncatewords:30 }}</p>
 									{% if card.image %}
 									<img class="card-image" src="/media/{{ card.image }}">
-                                {% endif %}
+                                    {% endif %}
 
 				                </div>
 									<p><a href="{% url 'card_detail' card.id %}" class="btn btn-custom">Read more</a>
 									</p>
 								</div>
+
+								<!--testing different styles-->
+                                <img class="card-image" src="/media/{{ card.image }}">
+								<p>{{ card.card_title }}</p>
+                                <p>£{{ card.card_price }}</p>
+								<!---->
+
 								{% endfor %}
 							</div>
 							<!--End of FILLER SECTION-->
