--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -35,11 +35,6 @@ a:hover{
 /*End of Utility Classes*/
 
 
-
-
-
-
-
 .navbar-background{
     background-color: #2a3439;
     padding: 0;
@@ -77,7 +72,7 @@ a:hover{
 
 .card-image{
     max-height: 270px;
-    display: none;
+    display: block;
 }
 
 #show-image{
