--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -60,6 +60,42 @@
 	</div>
 		{% endfor %}
 <!--End of list of cards-->
+
+<!--Experimental Bootstrap Table-->
+<table class="table">
+  <thead class="thead-dark">
+    <tr>
+    <th scope="col">Vendor Name</th>
+    <th scope="col">Vendor Name</th>
+    <th scope="col">Card</th>
+    <th scope="col">Condition</th>
+    <th scope="col">Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+<!--End of Experimental Bootstrap Table-->
+
 	</div>
 	{% endblock %}
 
