--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -21,114 +21,231 @@
 	</div>
 </div>
 <!--End of background image-->
-<div class="container">
+<div class="container-fluid">
 	<!--Website Header-->
-	<div class="row border-bottom">
-		<div class="px-3 py-3 pt-md-4 pb-md-6 text-center">
-			<h3 class="display-4">Magic Market Update</h3>
-			<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
-				rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
-				adipisci pariatur alias officia numquam. Consectetur, aspernatur?
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-				accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-				pariatur alias officia numquam. Consectetur, aspernatur?
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-				accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-				pariatur alias officia numquam. Consectetur, aspernatur?</p>
+	<div class="container">
+		<div class="row border-bottom">
+			<div class="px-3 py-3 pt-md-4 pb-md-6 text-center">
+				<h3 class="display-4">Magic Market Update</h3>
+				<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
+					rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
+					adipisci pariatur alias officia numquam. Consectetur, aspernatur?
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+					pariatur alias officia numquam. Consectetur, aspernatur?
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+					pariatur alias officia numquam. Consectetur, aspernatur?</p>
+			</div>
 		</div>
 	</div>
 	<!---->
-	<div class="row justify-content-around pt-3">
-		<!--Popular cards sorted by views-->
-		<div class="col-sm-12 col-md-12 col-lg-4">
-			<h1 class="center">Popular Cards!</h1>
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner">
-					{% for card in cards|dictsortreversed:"listing_views" %}
-					{% if forloop.counter == 1 %}
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-						<div class="carousel-caption-custom d-none d-md-block">
-							<h5>{{ card.card_title }}</h5>
-							<p>£{{ card.card_price }}</p>
-							<p><a href="{% url 'card_detail' card.id %}"
-									class="button-effect nobreak margin-center">View Card</a></p>
-						</div>
-					</div>
-					{% else %}
-					<div class="carousel-item">
-						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-						<div class="carousel-caption-custom d-none d-md-block">
-							<h5>{{ card.card_title }}</h5>
-							<p>£{{ card.card_price }}</p>
-							<p><a href="{% url 'card_detail' card.id %}"
-									class="button-effect nobreak margin-center">View Card</a></p>
-						</div>
-					</div>
-					{% endif %}
-					{% endfor %}
+
+	<!--Popular cards sorted by views-->
+	<div class="container">
+		<div class="row justify-content-around pt-3 pb-3 border-bottom">
+			<div class="col-12 p-3">
+				<div class="row pt-3 pb-2">
+					<h1 class="col-12 center">Popular Cards!</h1>
 				</div>
-				<a class="carousel-control-prev custom-controls" href="#carouselExampleControls" role="button"
-					data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next custom-controls" href="#carouselExampleControls" role="button"
-					data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
-		</div>
-		<!--End of popular cards sections-->
-
-		<!--Latest listings section-->
-
-
-		<div class="col-sm-12 col-md-12 col-lg-4">
-			<h1 class="center">Most Recent</h1>
-			<div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner">
-					{% for card in cards|dictsortreversed:"listing_created_date"%}
-					{% if forloop.counter == 1 %}
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-						<div class="carousel-caption-custom d-none d-md-block">
-							<h5>{{ card.card_title }}</h5>
-							<p>£{{ card.card_price }}</p>
-							<p><a href="{% url 'card_detail' card.id %}"
-									class="button-effect nobreak margin-center">View Card</a></p>
-						</div>
-					</div>
-					{% else %}
-					<div class="carousel-item">
-						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-						<div class="carousel-caption-custom d-none d-md-block">
-							<h5>{{ card.card_title }}</h5>
-							<p>£{{ card.card_price }}</p>
-							<p><a href="{% url 'card_detail' card.id %}"
-									class="button-effect nobreak margin-center">View Card</a></p>
-						</div>
-					</div>
-					{% endif %}
-					{% endfor %}
+				<div class="row justify-center pb-3">
+					<a class="custom-controls carousel-prev" href="#carouselExampleControls" role="button"
+						data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="custom-controls carousel-next" href="#carouselExampleControls" role="button"
+						data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
-				<a class="carousel-control-prev custom-controls" href="#carouselExampleControls1" role="button"
-					data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next custom-controls" href="#carouselExampleControls1" role="button"
-					data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-			</div>
-		</div>
-		<!--End of SECTION-->
-	</div>
-</div>
-{% endblock %}
-{% block end_js %}
-<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-{% endblock %}
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						{% for card in cards|dictsortreversed:"listing_views" %}
+						{% if forloop.counter == 1 %}
+						<div class="carousel-item active">
+							<div class="row">
+								<div class="col-sm-12 col-md-6">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+                            </div>
+									<div class="col-sm-12 col-md-6 p-5 center-small">
+										<h3>{{ card.card_title }}</h3>
+										<p>Vendor: <a class="underline-link"
+												href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+										</p>
+										<p>{{ card.card_description}}</p>
+										<p><span class="boldtext">Edition:</span> {{ card.card_edition }}</p>
+										<p><span class="boldtext">Condition:</span> {{ card.card_condition }}</p>
+										<p><span class="boldtext">Price: </span>£{{ card.card_price }}</p>
+										<p><span class="boldtext">Listing Published date:</span>
+											{{ card.listing_published_date }}
+										</p>
+										<div class="row pt-4">
+											<a href="{% url 'get_cards' %}" class="button-effect nobreak">View Other
+												Listings</a>
+											{% if user.is_authenticated %}
+											<form method="post" action="{% url 'add_to_cart' card.id %}">
+												{% csrf_token %}
+												<div class="input-group cart-form">
+													<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000"  placeholder="Quantity" value="1">
+													<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+												</div>
+											</form>
+											{% endif %}
+										</div>
+									</div>
+								</div>
+							</div>
+							{% else %}
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col-sm-12 col-md-6">
+										<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+                                </div>
+										<div class="col-sm-12 col-md-6 p-5 center-small">
+											<h3>{{ card.card_title }}</h3>
+											<p>Vendor: <a class="underline-link"
+													href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+											</p>
+											<p>{{ card.card_description}}</p>
+											<p><span class="boldtext">Edition:</span> {{ card.card_edition }}</p>
+											<p><span class="boldtext">Condition:</span> {{ card.card_condition }}</p>
+											<p><span class="boldtext">Price: </span>£{{ card.card_price }}</p>
+											<p><span class="boldtext">Listing Published date:</span>
+												{{ card.listing_published_date }}
+											</p>
+											<div class="row pt-4">
+												<a href="{% url 'get_cards' %}" class="button-effect nobreak">View Other
+													Listings</a>
+												{% if user.is_authenticated %}
+												<form method="post" action="{% url 'add_to_cart' card.id %}">
+													{% csrf_token %}
+													<div class="input-group cart-form">
+														<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000"  placeholder="Quantity" value="1">
+														<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+													</div>
+												</form>
+												{% endif %}
+											</div>
+										</div>
+									</div>
+								</div>
+								{% endif %}
+								{% endfor %}
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--End of popular cards sections-->
+
+				<!--Latest listings section-->
+
+				<div class="row justify-content-around pt-3 pb-3">
+					<div class="col-12 p-3">
+						<div class="row pt-3 pb-2">
+							<h1 class="col-12 center">Latest Listings!</h1>
+						</div>
+						<div class="row justify-center pb-3">
+							<a class="custom-controls carousel-prev" href="#carouselExampleControls1" role="button"
+								data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="custom-controls carousel-next" href="#carouselExampleControls1" role="button"
+								data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
+						<div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
+								{% for card in cards|dictsortreversed:"listing_created_date"%}
+								{% if forloop.counter == 1 %}
+								<div class="carousel-item active">
+									<div class="row">
+										<div class="col-sm-12 col-md-6">
+											<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+                            </div>
+											<div class="col-sm-12 col-md-6 p-5 center-small">
+												<h3>{{ card.card_title }}</h3>
+												<p>Vendor: <a class="underline-link"
+														href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+												</p>
+												<p>{{ card.card_description}}</p>
+												<p><span class="boldtext">Edition:</span> {{ card.card_edition }}</p>
+												<p><span class="boldtext">Condition:</span> {{ card.card_condition }}
+												</p>
+												<p><span class="boldtext">Price: </span>£{{ card.card_price }}</p>
+												<p><span class="boldtext">Listing Published date:</span>
+													{{ card.listing_published_date }}
+												</p>
+												<div class="row pt-4">
+													<a href="{% url 'get_cards' %}" class="button-effect nobreak">View
+														Other
+														Listings</a>
+													{% if user.is_authenticated %}
+													<form method="post" action="{% url 'add_to_cart' card.id %}">
+														{% csrf_token %}
+														<div class="input-group cart-form">
+															<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000"  placeholder="Quantity" value="1">
+															<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+														</div>
+													</form>
+													{% endif %}
+												</div>
+											</div>
+										</div>
+									</div>
+									{% else %}
+									<div class="carousel-item">
+										<div class="row">
+											<div class="col-sm-12 col-md-6">
+												<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+                                </div>
+												<div class="col-sm-12 col-md-6 p-5 center-small">
+													<h3>{{ card.card_title }}</h3>
+													<p>Vendor: <a class="underline-link"
+															href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+													</p>
+													<p>{{ card.card_description}}</p>
+													<p><span class="boldtext">Edition:</span> {{ card.card_edition }}
+													</p>
+													<p><span class="boldtext">Condition:</span>
+														{{ card.card_condition }}
+													</p>
+													<p><span class="boldtext">Price: </span>£{{ card.card_price }}</p>
+													<p><span class="boldtext">Listing Published date:</span>
+														{{ card.listing_published_date }}
+													</p>
+													<div class="row pt-4">
+														<a href="{% url 'get_cards' %}"
+															class="button-effect nobreak">View
+															Other
+															Listings</a>
+														{% if user.is_authenticated %}
+														<form method="post" action="{% url 'add_to_cart' card.id %}">
+															{% csrf_token %}
+															<div class="input-group cart-form">
+																<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000"  placeholder="Quantity" value="1">
+																<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+															</div>
+														</form>
+														{% endif %}
+													</div>
+												</div>
+											</div>
+										</div>
+										{% endif %}
+										{% endfor %}
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--End of SECTION-->
+					</div>
+				</div>
+				{% endblock %}
+				{% block end_js %}
+				<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
+				{% endblock %}
