--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -33,11 +33,14 @@
 			{% endfor %}
 
 		</div>
-		<div class="col-sm-12 col-md-4">
-			<div class="row">
+		<div class="col-sm-12 col-md-4 pt-2">
+			<div class="row justify-content-center">
+				<p>{{ card_count }} items</p>
+			</div>
+			<div class="row justify-content-center">
 				<p>Total: £{{ total }}</p>
 			</div>
-            <div class="row">	
+			<div class="row justify-content-center">
 				<a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
 			</div>
 		</div>
