--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,6 @@
 /*Document classes*/
 body{
-    font-family: 'Zilla Slab', serif;
+    font-family: 'Noto Sans TC', sans-serif;
     color: #2a3439;
 }
 
@@ -37,6 +37,10 @@ a:hover{
 .margin-center{
     margin-right: auto !important;
     margin-left: auto !important;
+}
+
+.justify-center{
+    justify-content: center;
 }
 
 .negative-top{
@@ -126,7 +130,7 @@ a:hover{
     color: #fff;
     text-decoration: none;
     background-color:#2a3439;
-    padding: 5px;
+    padding: 7px;
     border-radius: 5px;
 }
 
@@ -154,8 +158,6 @@ a:hover{
 .cart-form{
     padding-top: 20px;
 }
-
-
 
 .card-minimalistic{
     margin: auto;
@@ -194,12 +196,22 @@ a:hover{
 
 /*Card Display Carousel Styling*/
 
-
-.carousel-control-next {
-  opacity: 1;
+.custom-controls{
+    background-color: #2a3439;
+    height: 50px;
+    width: 50px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    opacity: 1;
+    border-radius: 5px;
 }
-.carousel-control-prev {
-  opacity: 1;
+
+.carousel-next {
+    margin-left: 15px;
+}
+.carousel-prev {
+  right: 7rem;
 }
 
 .carousel-caption-custom{
@@ -212,9 +224,14 @@ a:hover{
   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
 }
 
-.custom-controls{
-    bottom: 8rem!important; 
+.carousel-control-next-icon{
+    height: 50px;
 }
+
+.carousel-control-prev-icon{
+    height: 50px;
+}
+
 
 /*End of Card Display Carousel Styling*/
 
@@ -234,7 +251,6 @@ textarea.form-control {
   font-size:15px;
   line-height:24px;
   color:#737373;
-  margin-top: 5rem;
 }
 .site-footer hr
 {
