--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -15,7 +15,7 @@
 <!--End messages section-->
 <!--Main Page Background Image-->
 <div class="banner-parent">
-	<img class="w-100" id="cover-image" src="{% static 'img/ikoria_banner_img3.jpg' %}" alt="banner-image">
+	<img class="w-100" id="cover-image" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="banner-image">
 	<div class="banner-child">
 		<h1>Latest Ikoria Product Now Available!</h1>
 	</div>
@@ -36,17 +36,26 @@
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
 					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
 					pariatur alias officia numquam. Consectetur, aspernatur?</p>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
+					rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
+					adipisci pariatur alias officia numquam. Consectetur, aspernatur?
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+					pariatur alias officia numquam. Consectetur, aspernatur?
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+					pariatur alias officia numquam. Consectetur, aspernatur?</p>
 			</div>
 		</div>
 	</div>
 	<!---->
 
 	<!--Popular cards sorted by views-->
-	<div class="container-fluid">
-		<div class="row justify-content-around pt-3 pb-3">
-			<div class="col-md-12 col-lg-6 p-3">
+	<div class="container-fluid cards-background">
+		<div class="row justify-content-center pt-5 pb-5">
+			<div class="col-md-12 col-lg-6 col-xl-4 p-3 mr-5 cards-background-white">
 				<div class="row pt-3 pb-2">
-					<h1 class="col-12 center">Popular Cards!</h1>
+					<h1 class="col-12 center">Popular Cards</h1>
 				</div>
 				<div class="row justify-center pb-5 pt-3">
 					<a class="custom-controls carousel-prev" href="#carouselExampleControls" role="button"
@@ -67,9 +76,9 @@
 						<div class="carousel-item active">
 							<div class="row">
 								<div class="col-sm-12 col-md-6">
-									<img class="d-block carousel-image" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<img class="d-block carousel-image margin-center" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
                             </div>
-									<div class="col-sm-12 col-md-6 p-5 center-small">
+									<div class="col-sm-12 col-md-6 pr-5 pb-5 pl-5 center-small">
 										<h3>{{ card.card_title }}</h3>
 										<p>Vendor: <a class="underline-link"
 												href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
@@ -101,9 +110,9 @@
 							<div class="carousel-item">
 								<div class="row">
 									<div class="col-sm-12 col-md-6">
-										<img class="d-block carousel-image" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+										<img class="d-block carousel-image margin-center" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
                                 </div>
-										<div class="col-sm-12 col-md-6 p-5 center-small">
+										<div class="col-sm-12 col-md-6 pr-5 pb-5 pl-5 center-small">
 											<h3>{{ card.card_title }}</h3>
 											<p>Vendor: <a class="underline-link"
 													href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
@@ -136,15 +145,15 @@
 							</div>
 						</div>
 					</div>
-				
-				<!--End of popular cards sections-->
 
-				<!--Latest listings section-->
+					<!--End of popular cards sections-->
 
-				
-					<div class="col-md-12 col-lg-6 p-3">
+					<!--Latest listings section-->
+
+
+					<div class="col-md-12 col-lg-6 col-xl-4 p-3 cards-background-white">
 						<div class="row pt-3 pb-2">
-							<h1 class="col-12 center">Latest Listings!</h1>
+							<h1 class="col-12 center">Latest Listings</h1>
 						</div>
 						<div class="row justify-center pb-5 pt-3">
 							<a class="custom-controls carousel-prev" href="#carouselExampleControls1" role="button"
@@ -165,9 +174,9 @@
 								<div class="carousel-item active">
 									<div class="row">
 										<div class="col-sm-12 col-md-6">
-											<img class="d-block carousel-image" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+											<img class="d-block carousel-image margin-center" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
                                         </div>
-											<div class="col-sm-12 col-md-6 p-5 center-small">
+											<div class="col-sm-12 col-md-6 pr-5 pb-5 pl-5 center-small">
 												<h3>{{ card.card_title }}</h3>
 												<p>Vendor: <a class="underline-link"
 														href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
@@ -201,9 +210,9 @@
 									<div class="carousel-item">
 										<div class="row">
 											<div class="col-sm-12 col-md-6">
-												<img class="d-block carousel-image" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+												<img class="d-block carousel-image margin-center" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
                                 </div>
-												<div class="col-sm-12 col-md-6 p-5 center-small">
+												<div class="col-sm-12 col-md-6 pr-5 pb-5 pl-5 center-small">
 													<h3>{{ card.card_title }}</h3>
 													<p>Vendor: <a class="underline-link"
 															href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
@@ -244,6 +253,49 @@
 						</div>
 						<!--End of SECTION-->
 					</div>
+					<!--Deck Help Section-->
+					<div class="container">
+						<div class="row border-top">
+							<div class="px-3 py-3 pt-md-4 pb-md-6">
+								<h3 class="display-4 center">Deck Help</h3>
+								<p class="lead">Not Sure where to start? Need help picking which cards are best in your
+									new deck? We're here to help!</p>
+								<p>Send us an email at <a class="underline-link" href="#">EMAIL HERE</a> and we'll be happy to help! We can
+									help you with</p>
+								<ul>
+									<li>Deck Building</li>
+									<li>Finding specific cards</li>
+									<li>Budget alternatives</li>
+									<li>Finding out which format is right for you!</li>
+									<li>Rules questions</li>
+								</ul>
+								<p>You can also check out some of other resources below. The MTG community is booming
+									and are always looking to help newcomers!</p>
+
+							</div>
+						</div>
+						<div class="row pb-5">
+							<div class="col-sm-12 col-md-4 no-spacing">
+								<a class="underline-link" target="_blank" href="#">
+									<img class="resource_image" src="{% static 'img/4x4_1.jpg' %}" alt="">
+									<h4 class="pt-2 center">Test3</h4>
+								</a>
+							</div>
+							<div class="col-sm-12 col-md-4 no-spacing">
+								<a class="underline-link" target="_blank" href="#">
+									<img class="resource_image" src="{% static 'img/4x4_2.jpg' %}" alt="">
+									<h4 class="pt-2 center">Test3</h4>
+								</a>
+							</div>
+							<div class="col-sm-12 col-md-4 no-spacing">
+								<a class="underline-link" target="_blank" href="#">
+									<img class="resource_image" src="{% static 'img/4x4_3.jpg' %}" alt="">
+									<h4 class="pt-2 center">Test3</h4>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!--End of deck help-->
 				</div>
 				{% endblock %}
 				{% block end_js %}
