--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -18,6 +18,11 @@ a:hover{
 .table td{
     vertical-align: middle;
 }
+
+.no-spacing{
+    padding: 0;
+    margin: 0;
+}
 /*End of Document classes*/
 
 /*Utility Classes*/
@@ -134,18 +139,19 @@ a:hover{
     border-radius: 5px;
 }
 
+.button-effect:hover{
+    color: #fff;
+    background-color: #2a3439e3;
+    transition: 0.5s;
+    border-color: #767676;
+    text-decoration: none;
+}
 .cardlist-row{
     border-bottom-style: solid;
     border-bottom-width: thin;
 }
 
-.button-effect:hover{
-    color: #fff;
-    background-color: #767676;
-    transition: 0.5s;
-    border-color: #767676;
-    text-decoration: none;
-}
+
 
 .add-to-cart-quantity{
     max-width: 50px;
@@ -185,6 +191,11 @@ a:hover{
     width: auto;
 }
 
+.resource_image{
+    max-width: 100%;
+    height: auto;
+}
+
 /*Shopping Cart*/
 .card{
     margin-bottom: 25px;
@@ -196,6 +207,19 @@ a:hover{
 
 /*Card Display Carousel Styling*/
 
+.cards-background{
+    background-image: url("https://www.wallpaperflare.com/static/1018/570/362/wings-dark-hair-chase-stone-magic-the-gathering-wallpaper.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 125%;
+}
+
+.cards-background-white{
+    background-color: #fff;
+    border-radius: 20px;
+
+}
+
 .custom-controls{
     background-color: #2a3439;
     height: 50px;
@@ -205,6 +229,11 @@ a:hover{
     text-align: center;
     opacity: 1;
     border-radius: 5px;
+    transition: 0.3s;
+}
+
+.custom-controls:hover{
+    background-color: #2a3439e3;
 }
 
 .carousel-next {
@@ -233,7 +262,7 @@ a:hover{
 }
 
 .carousel-image {
-    width: 20rem;
+    width: inherit;
 }
 
 
