--- a/cards/templates/cardinformation.html
+++ b/cards/templates/cardinformation.html
@@ -17,7 +17,9 @@
 			</p>
 			<div class="row pt-4">
 				<a href="{% url 'get_cards' %}" class="button-effect nobreak">View Other Listings</a>
-				<a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
+				{% if user == card.user %}
+				    <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
+				{% endif %}
 				{% if user.is_authenticated %}
 				<form method="post" action="{% url 'add_to_cart' card.id %}">
 					{% csrf_token %}
@@ -27,6 +29,7 @@
 					</div>
 				</form>
 				{% endif %}
+
 			</div>
 		</div>
 	</div>
