--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -34,10 +34,12 @@
 							<img class="camera-icon" src="{% static 'img/camera_icon.png' %}" alt="Camera Icon">
 		                </div>
 							{% if card.image %}
-							<img class="card-image-hidden" id="{{card.id}}" src="/media/{{ card.image }}">
-                        {% endif %}
+							    <img class="card-image-hidden" id="{{card.id}}" src="/media/{{ card.image }}">
+                            {% endif %}
                     </td>
-					<td>{{ card.card_title }}</td>
+
+					<td><a class="underline-link" href="{% url 'view_specific_card' card.id %}">{{ card.card_title }}</a></td>
+
 					<td><a class="underline-link"
 							href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a></td>
 					<td>{{ card.card_condition }}</td>
